force-app/main/default/objects/Conflict_Match__c/Conflict_Match__c.object-meta.xml
<CustomObject>
    <description>Individual conflict matches found during a conflict check</description>
    <label>Conflict Match</label>
    <nameField>
        <displayFormat>CM-{0000000}</displayFormat>
        <label>Conflict Match Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conflict Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>