force-app/main/default/objects/Conflict_Match__c/fields/Conflict_Check_Log__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Check_Log__c</fullName>
    <description>Parent conflict check log</description>
    <label>Conflict Check Log</label>
    <referenceTo>Conflict_Check_Log__c</referenceTo>
    <relationshipLabel>Conflict Matches</relationshipLabel>
    <relationshipName>Conflict_Matches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>