force-app/main/default/objects/Conflict_Match__c/fields/Match_Reason__c.field-meta.xml
<CustomField>
    <fullName>Match_Reason__c</fullName>
    <description>Explanation of why this record matched</description>
    <label>Match Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>