force-app/main/default/objects/Conflict_Match__c/fields/Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Type__c</fullName>
    <description>Type of match (Email, Phone, Name, Business, Matter Relationship)</description>
    <label>Match Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Matter Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>