force-app/main/default/objects/Conflict_Match__c/fields/Matched_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Matched_Record_Id__c</fullName>
    <description>Salesforce ID of the matched record</description>
    <label>Matched Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>