force-app/main/default/objects/Conflict_Match__c/fields/Matched_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Matched_Record_Name__c</fullName>
    <description>Name of the matched record</description>
    <label>Matched Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>