force-app/main/default/objects/Conflict_Match__c/fields/Matched_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Matched_Record_Type__c</fullName>
    <description>Type of record that matched (Lead, Contact, Account, Matter, etc.)</description>
    <label>Matched Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>