force-app/main/default/objects/Conflict_Match__c/fields/Matter_Status__c.field-meta.xml
<CustomField>
    <fullName>Matter_Status__c</fullName>
    <description>Status of the related matter if applicable</description>
    <label>Matter Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>