force-app/main/default/objects/Conflict_Match__c/fields/Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this match has been reviewed</description>
    <label>Reviewed</label>
    <type>Checkbox</type>
</CustomField>