force-app/main/default/objects/Conflict_Match__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <description>Risk level based on risk score</description>
    <formula>IF(Risk_Score__c &gt;= 80, &quot;Critical&quot;,
IF(Risk_Score__c &gt;= 60, &quot;High&quot;,
IF(Risk_Score__c &gt;= 40, &quot;Medium&quot;, &quot;Low&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Level</label>
    <type>Text</type>
</CustomField>